--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/c:ange-1.jpg.jpg" alt="Image">
+										<img src="assets/img/c:ange-1.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>			
