--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/c:ange.jpg" alt="Image">
+										<img src="assets/img/project-1.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>			
@@ -93,7 +93,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/ange-1.jpg" alt="Image">
+										<img src="assets/img/project-2.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>			
